// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authentication-mutations login 1`] = `
{
  "data": {
    "login": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations login bad password 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Login failure: username or password are incorrect],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations login bad username 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Login failure: username or password are incorrect],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations register bad code 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Register code not valid],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations with good register code available register good 1`] = `
{
  "data": {
    "register": {
      "_id": Any<String>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations with good register code available register use code twice 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Register code not valid],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations with good register code available register use email twice 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Register code not valid],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`authentication-mutations with good register code available register use username twice 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Register code not valid],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
